# opengl-from-scratch

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GLViewport.cpp  GLViewport.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  PhongData.h  PhongShader.cpp  PhongShader.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Types.cpp  Types.h  Vertex.cpp  Vertex.h  Viewport.cpp  Viewport.h  (+4 more)
01-glfw-window/: main.cpp
02-simple-triangle/: CMakeLists.txt  main.cpp
03-vertex-color-triangle/shaders/: shader.vert
04-texture-quad/: CMakeLists.txt  nohup.out
06-model-loading/: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Shader.cpp  Shader.h  common.h  main.cpp  utils.h
06-model-loading/shaders/: shader.frag  shader.vert
07-material-and-texture/: CMakeLists.txt  Model.cpp  common.cpp  common.h  main.cpp  utils.cpp  utils.h
07-material-and-texture/fbxsdk/: CMakeLists.txt
07-material-and-texture/shaders/: shader.frag
08-resource-management/: CMakeLists.txt  Common.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelTools.cpp  ModelTools.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.h  Types.h  common.cpp  common.h  main.cpp  utils.h
08-resource-management/fbxsdk/include/fbxsdk/scene/geometry/: fbxlayer.h
09-application-refactor/: Application.cpp  Application.h  CMakeLists.txt  Common.cpp  Material.cpp  Mesh.h  ResourceManager.cpp  main.cpp
dev/: CMakeLists.txt  Common.h  Material.cpp  Material.h  Shader.cpp  Texture.cpp  Types.h
dev/resources/primitives/: primitive-cube.fbx
dev/shaders/: shader.frag
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/imgui/: CMakeLists.txt
models/: nohup.out
optix/: CMakeLists.txt  DevicePrograms.cu  LaunchParams.h  Scene.cpp  Scene.h
optix/sutil/: Scene.cpp
resources/primitives/: primitive-sphere.fbx
shaders/: DrawGroup.cpp  DrawGroup.h  PhongFragment.glsl  fragment.glsl  shader.frag  shader.vert  vertex.glsl
